# vehicleRoutingProblem

./: Cargo.toml  README.md
src/: cli.rs  crossover.rs  lib.rs  main.rs  mutation.rs  parser.rs  plotting.rs  read_json.rs  replacement.rs  repr.rs  solver.rs
src/results/: hyperparameter_tuning.csv
src/results/test_1/: full_output.txt  output.txt  run_metrics_sampled.csv
src/results/test_2/: full_output.txt  output.txt  run_metrics_sampled.csv
src/results/test_3/: full_output.txt  output.txt  run_metrics_sampled.csv
src/results/test_results/test1/: output.txt
src/results/test_results/test2/: output.txt
src/results/test_results/test3/: output.txt
